--- a/.github/workflows/python_app.yml
+++ b/.github/workflows/python_app.yml
@@ -1,4 +1,4 @@
-name: Flask App CI/CD
+name: Python Application CI
 
 on:
   push:
@@ -9,12 +9,12 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
     # Checkout the code
-    - name: Checkout code
+    - name: Check out repository
       uses: actions/checkout@v3
 
     # Set up Python
@@ -29,30 +29,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # Run tests
+    # Set PYTHONPATH for test discovery
+    - name: Set PYTHONPATH
+      run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+
+    # Run pytest
     - name: Run tests
-      run: |
-        pytest
-
-  run:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Run Flask server
-      run: |
-        export FLASK_APP=app.py
-        flask run --host=0.0.0.0 --port=8000
+      run: pytest --verbose
